# Code-Learning-Assistant

./: .env.example  .gitignore  README.md  docker-compose.prod.yml  docker-compose.yml
backend/: .dockerignore  .env.example  Dockerfile  alembic.ini  entrypoint.sh  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial.py  0002_lessons.py  0003_exercises.py  0004_quizzes.py  0005_ai_interactions.py  0006_content_source.py  0007_progress.py  0008_subscriptions.py  0009_language_tracks.py  0010_placement.py  0011_curriculum.py  0012_course_chat.py  0013_review_status.py  0014_quiz_explanation.py  0015_review_items.py  0016_course_kind.py
backend/app/: __init__.py  main.py
backend/app/api/: deps.py
backend/app/core/: config.py  languages.py  logging.py  security.py
backend/app/domain/: entities.py  repositories.py
backend/app/infrastructure/: generation_worker.py  grading.py
backend/app/schemas/: admin_review.py  ai.py  content.py  curriculum.py  entitlements.py  exercise.py  health.py  placement.py  practice.py  progress.py  quiz.py  review.py  subscription.py  today.py  (+2 more)
backend/scripts/: seed.py  set_admin.py
backend/tests/: conftest.py  fakes.py  test_admin_review.py  test_ai.py  test_content.py  test_course_chat.py  test_curriculum.py  test_entitlements.py  test_execution.py  test_health.py  test_languages.py  test_me_api.py  test_placement.py  test_polish.py  test_practice.py  test_quiz.py  test_recommendation.py  test_review.py  test_submissions.py  test_subscription.py  test_tracks.py  test_user_service.py
(+163 files in other folders)
