[project]
name = "codepath-backend"
version = "0.1.0"
description = "CodePath AI backend (FastAPI, Clean Architecture)"
requires-python = ">=3.11"

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["app", "tests"]
exclude = ["alembic/versions"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
